Final clean backend: Project + Document + Security setup